--- a/viewer/index.html
+++ b/viewer/index.html
@@ -19,7 +19,13 @@
 </head>
 <body>
   <div id="header">🌿 Forest Department — Grid Viewer</div>
-  <div id="map"></div>
+  <div id="map" style="height: 100vh; width: 100%;"></div>
+  <script>
+    const map = L.map('map').setView([11.4, 78.3], 10); // center example
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
+    }).addTo(map);
+  </script>
   <script>
     // --- Get KML ID from URL ---
     const params = new URLSearchParams(window.location.search);
