--- a/viewer/index.html
+++ b/viewer/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>🌿 Forest Grid Map Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- Leaflet core -->
   <link
     rel="stylesheet"
@@ -12,28 +12,19 @@
   />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- Leaflet-omnivore plugin for KML -->
-  <script src="https://unpkg.com/leaflet-omnivore@0.3.4/leaflet-omnivore.min.js"></script>
+  <!-- KML parser that supports polygons -->
+  <script src="https://unpkg.com/leaflet-kml/L.KML.js"></script>
 
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+    html, body, #map { height: 100%; margin: 0; padding: 0; }
     #header {
       position: absolute;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.9);
-      padding: 8px 16px;
-      border-radius: 10px;
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      font-weight: 600;
-      color: #2b9348;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+      top: 10px; left: 50%; transform: translateX(-50%);
+      background: rgba(255,255,255,0.9);
+      padding: 8px 16px; border-radius: 10px;
+      font-family: Arial, sans-serif; font-size: 16px;
+      font-weight: 600; color: #2b9348;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
       z-index: 9999;
     }
   </style>
@@ -43,36 +34,35 @@
   <div id="map"></div>
 
   <script>
-    // --- Map Setup ---
-    const map = L.map("map").setView([11.3, 78.5], 10);
-
+    // --- Map setup ---
+    const map = L.map('map').setView([11.3, 78.5], 10);
     L.tileLayer(
-      "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
-      {
-        attribution: "&copy; Esri — Satellite Imagery",
-        maxZoom: 19,
-      }
+      'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',
+      { attribution: '&copy; Esri — Satellite Imagery', maxZoom: 19 }
     ).addTo(map);
 
-    // --- Get the KML ID from URL ---
+    // --- Parse ?id= from URL ---
     const params = new URLSearchParams(window.location.search);
-    const fileId = params.get("id");
+    const fileId = params.get('id');
 
     if (fileId) {
-      // Build correct KML URL (update repo path if needed)
-      const kmlUrl = `https://krishnaSureshFor.github.io/tnforest_kml_to_grid_v2.0/public_kml/${fileId}.kml`;
+      const kmlUrl =
+        `https://krishnaSureshFor.github.io/tnforest_kml_to_grid_v2.0/public_kml/${fileId}.kml`;
       console.log("Loading KML:", kmlUrl);
 
-      // Load KML using omnivore
-      const layer = omnivore.kml(kmlUrl)
-        .on("ready", function () {
-          map.fitBounds(layer.getBounds());
+      fetch(kmlUrl)
+        .then(res => res.text())
+        .then(kmlText => {
+          const parser = new DOMParser();
+          const kml = parser.parseFromString(kmlText, "text/xml");
+          const track = new L.KML(kml);
+          map.addLayer(track);
+          map.fitBounds(track.getBounds());
         })
-        .on("error", function (e) {
-          console.error("Failed to load KML:", e);
+        .catch(err => {
+          console.error("Failed to load KML:", err);
           alert("❌ Could not load KML file.");
-        })
-        .addTo(map);
+        });
     } else {
       alert("❌ Invalid or missing KML ID in URL.");
     }
