--- a/viewer/index.html
+++ b/viewer/index.html
@@ -18,13 +18,14 @@
   <style>
     html, body, #map { height: 100%; margin: 0; padding: 0; }
     #header {
-      position:absolute;
-      top:10px;left:50%;transform:translateX(-50%);
-      background:rgba(255,255,255,0.9);
-      padding:8px 16px;border-radius:10px;
-      font-family:Arial,sans-serif;font-weight:600;font-size:16px;color:#2b9348;
-      box-shadow:0 2px 6px rgba(0,0,0,0.2);
-      z-index:9999;
+      position: absolute;
+      top: 10px; left: 50%; transform: translateX(-50%);
+      background: rgba(255,255,255,0.9);
+      padding: 8px 16px; border-radius: 10px;
+      font-family: Arial, sans-serif; font-weight: 600; font-size: 16px;
+      color: #2b9348;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      z-index: 9999;
     }
   </style>
 </head>
@@ -50,15 +51,14 @@
       throw new Error("No ?id= parameter found");
     }
 
-    // --- Construct jsDelivr CDN URL ---
-    const kmlUrl =
-  `    https://raw.githubusercontent.com/krishnaSureshFor/tnforest_kml_to_grid_v2.0/main/public_kml/${fileId}.kml`;
-
+    // ✅ Construct correct Raw GitHub URL (no spaces!)
+    const kmlUrl = `https://raw.githubusercontent.com/krishnaSureshFor/tnforest_kml_to_grid_v2.0/main/public_kml/${fileId}.kml`;
+    console.log("📂 Fetching KML from:", kmlUrl);
 
     // --- Fetch and parse manually using L.KML ---
     fetch(kmlUrl)
       .then(res => {
-        if (!res.ok) throw new Error("KML not found on CDN");
+        if (!res.ok) throw new Error("KML not found or access denied");
         return res.text();
       })
       .then(kmlText => {
