--- a/viewer/index.html
+++ b/viewer/index.html
@@ -14,21 +14,21 @@
   <script src="//unpkg.com/leaflet-kml@latest/L.KML.js"></script>
 
   <style>
-    /* 🚨 CRITICAL FIX: Ensure the HTML, BODY, and MAP elements occupy the full screen height */
+    /* 🚨 CRITICAL FIX: Ensure HTML, BODY, and MAP elements occupy the full screen height */
     html, body {
-      height: 100%;       
+      height: 100%;       /* Force HTML and BODY to take full viewport height */
       width: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden;   
+      overflow: hidden;   /* Prevents scrollbars */
     }
 
     #map { 
-      height: 100%;       
+      height: 100%;       /* Force the map div to take 100% of the body height */
       width: 100%;
       margin: 0; 
       padding: 0; 
-      z-index: 1;         
+      z-index: 1;         /* Map is layer 1 */
     }
     
     #header {
@@ -76,11 +76,10 @@
 <body>
   <div id="header">🌿 Forest Department — Grid Viewer</div>
   <div id="map"></div>
-  <div id="log-batch">**Log Batch** (Check browser console for true error)</div>
+  <div id="log-batch">**Log Batch** (Reload the page to start logging)</div>
 
   <script>
     // --- Logging Utility Function ---
-    // NOTE: If this section fails, you MUST use F12 Console/Network tabs.
     const logContainer = document.getElementById('log-batch');
     const originalConsole = { 
         log: console.log, 
@@ -133,12 +132,13 @@
     const DEFAULT_ZOOM = 10;
     
     // --- 2. Initialize Map ---
+    // If the map is blank, it is likely failing here due to CSS height or script load failure.
     const map = L.map("map").setView([DEFAULT_LAT, DEFAULT_LON], DEFAULT_ZOOM);
     console.log("Map initialized.");
 
     // Add Esri Satellite Layer (the base map)
     L.tileLayer(
-      "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
+      "//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
       { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
     ).addTo(map);
     console.log("Satellite tile layer added.");
