--- a/viewer/index.html
+++ b/viewer/index.html
@@ -39,14 +39,14 @@
   <div id="map"></div>
 
   <script>
-    // --- 1. Initialize Map ---
+    // --- 1️⃣ Initialize the map ---
     const map = L.map("map").setView([11.3, 78.5], 10);
     L.tileLayer(
       "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
       { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
     ).addTo(map);
 
-    // --- 2. Get ?id= parameter from URL ---
+    // --- 2️⃣ Get the ?id= parameter ---
     const params = new URLSearchParams(window.location.search);
     const fileId = params.get("id");
     if (!fileId) {
@@ -54,11 +54,11 @@
       throw new Error("No ?id= parameter found");
     }
 
-    // --- 3. Build CORS-safe jsDelivr URL ---
+    // --- 3️⃣ Build CORS-safe jsDelivr URL ---
     const kmlUrl = `https://cdn.jsdelivr.net/gh/krishnaSureshFor/tnforest_kml_to_grid_v2.0@main/public_kml/${fileId}.kml`;
     console.log("📂 Fetching KML from:", kmlUrl);
 
-    // --- 4. Fetch and render the KML ---
+    // --- 4️⃣ Fetch, clean, and render the KML ---
     fetch(kmlUrl, { mode: "cors", cache: "no-cache" })
       .then(res => {
         console.log("Response status:", res.status);
@@ -67,11 +67,14 @@
       })
       .then(kmlText => {
         console.log("KML text length:", kmlText.length);
+
+        // 🧹 Strip XML namespace prefixes like "ns0:"
+        const cleanText = kmlText.replace(/<\/*\w+:/g, match => match.replace(/[\w:]+:/, ""));
         const parser = new DOMParser();
-        const kml = parser.parseFromString(kmlText, "text/xml");
+        const kml = parser.parseFromString(cleanText, "text/xml");
         const layer = new L.KML(kml);
 
-        // Wait until KML fully parsed before fitting bounds
+        // Wait until the KML is fully parsed
         layer.on("loaded", () => {
           console.log("✅ KML fully loaded — adjusting map bounds...");
           const bounds = layer.getBounds();
@@ -79,7 +82,7 @@
             map.fitBounds(bounds);
           }
 
-          // Optional: force visible style
+          // Make sure polygons are visible
           layer.eachLayer(l => {
             if (l.setStyle) {
               l.setStyle({ color: "#FF0000", weight: 1, fillOpacity: 0.15 });
