--- a/viewer/index.html
+++ b/viewer/index.html
@@ -12,9 +12,8 @@
   />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- Patch Leaflet for MultiPolygon support -->
+  <!-- ✅ Patch for "L.MultiPolygon is not a constructor" -->
   <script>
-    // ✅ Fix for "L.MultiPolygon is not a constructor" error
     if (typeof L.MultiPolygon === "undefined") {
       L.MultiPolygon = function (latlngs, options) {
         return new L.Polygon(latlngs, options);
@@ -69,14 +68,12 @@
   <div id="map"></div>
 
   <script>
-    // --- 1️⃣ Initialize map ---
     const map = L.map("map").setView([11.3, 78.5], 10);
     L.tileLayer(
       "https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}",
       { attribution: "&copy; Esri — Satellite Imagery", maxZoom: 19 }
     ).addTo(map);
 
-    // --- 2️⃣ Get KML file ID from URL ---
     const params = new URLSearchParams(window.location.search);
     const fileId = params.get("id");
     if (!fileId) {
@@ -84,12 +81,10 @@
       throw new Error("No ?id= parameter found");
     }
 
-    // --- 3️⃣ Build GitHub CDN URL ---
     const kmlUrl =
       `https://cdn.jsdelivr.net/gh/krishnaSureshFor/tnforest_kml_to_grid_v2.0@main/public_kml/${fileId}.kml`;
     console.log("📂 Fetching KML from:", kmlUrl);
 
-    // --- 4️⃣ Fetch, clean, and load KML ---
     fetch(kmlUrl, { mode: "cors", cache: "no-cache" })
       .then(res => {
         console.log("Response status:", res.status);
@@ -99,23 +94,29 @@
       .then(kmlText => {
         console.log("KML text length:", kmlText.length);
 
-        // 🧹 Strip XML namespace prefixes like ns0:
+        // 🧹 Remove ns0: namespace prefixes
         const cleanText = kmlText.replace(/<\/*\w+:/g, m => m.replace(/[\w:]+:/, ""));
         const parser = new DOMParser();
         const kml = parser.parseFromString(cleanText, "text/xml");
         const layer = new L.KML(kml);
 
-        // ✅ When fully loaded
-        layer.on("loaded", () => {
-          console.log("✅ KML parsed successfully");
-          document.getElementById("loading").style.display = "none";
+        // ✅ Add layer immediately
+        map.addLayer(layer);
 
-          const bounds = layer.getBounds();
-          if (bounds && bounds.isValid && bounds.isValid()) {
-            map.fitBounds(bounds);
+        // 🔍 Try fitting bounds after short delay
+        setTimeout(() => {
+          try {
+            const bounds = layer.getBounds();
+            if (bounds && bounds.isValid && bounds.isValid()) {
+              map.fitBounds(bounds);
+            }
+            document.getElementById("loading").style.display = "none"; // ✅ hide overlay here
+          } catch (err) {
+            console.warn("⚠️ Could not auto-fit bounds:", err);
+            document.getElementById("loading").style.display = "none";
           }
 
-          // Style polygons (for clarity)
+          // 🔴 Style the polygons for visibility
           layer.eachLayer(l => {
             if (l.setStyle) {
               l.setStyle({
@@ -126,9 +127,7 @@
               });
             }
           });
-        });
-
-        map.addLayer(layer);
+        }, 800); // wait 0.8s for KML to fully render
       })
       .catch(err => {
         console.error("❌ Failed to load KML:", err);
